<resources>
    <!-- app -->
    <string name="app_name">Simple Clipboard Editor</string>
    <string name="about">"This app displays the current content of your phone's clipboard.
When that content is text you can edit, replace, delete or perform any other text modification, live.
Additionally, you can also share the content directly or create a notification with it for later use.

Note: Due to Google's restrictions the app can't interact with the clipboard while it's closed. It will be automatically updated as soon as you reopen it though. The app doesn't contains any history functionality (not yet at least).


Made by TrianguloY. Extremely small, efficient, without any permissions, free and without ads."</string>
    <string name="blog">Blog</string>
    <string name="source_code">Source code</string>
    <string name="play_store">Play Store</string>

    <!-- main -->
    <string name="label_label">Label:</string>
    <string name="label_content">Content:</string>
    <string name="label_mimetype">Mimetype:</string>
    <string name="descr_notify">Set as notification</string>
    <string name="descr_share">Share</string>
    <string name="descr_clear">Clear</string>
    <string name="descr_configure">Settings</string>
    <string name="descr_info">Info</string>
    <string name="descr_sync_to">Replace the clipboard data with the inputs value</string>
    <string name="descr_sync_from">Replace the inputs value with the clipboard data</string>
    <string name="txt_empty">empty</string>
    <string name="txt_itemcount">\nItem count = </string>
    <string name="clip_sent">sent</string>
    <string name="statistics">lines: %d , words: %d , chars: %s</string>

    <!-- notifications -->
    <string name="channel_name">Text</string>
    <string name="channel_description">Clipboard text</string>
    <string name="noPermission">Permission not granted</string>

    <!-- settings -->
    <string name="conf_keyboard">Show keyboard when app opens</string>
    <string name="conf_capitalize">Capitalize first letter of input sentences (some keyboards may ignore this)</string>
    <string name="conf_statistics">Show content statistics</string>
    <string name="conf_sync_ci">Clipboard → Input sync:</string>
    <string name="conf_sync_start">When app starts (unless text were sent to the app)</string>
    <string name="conf_sync_btn_ci">Manually (button)</string>
    <string name="conf_sync_external">When clipboard changes externally</string>
    <string name="conf_sync_ic">Input → Clipboard sync:</string>
    <string name="conf_sync_input">When input textbox changes</string>
    <string name="conf_sync_btn_ic">Manually (button)</string>
    <string name="conf_sync_pause">When dialog closes/loses focus</string>

    <!-- shortcuts -->
    <string name="shortcut_clear">Clear clipboard</string>
    <string name="toast_cleared">Clipboard cleared</string>

    <!-- process -->
    <string name="process">Clipboard editor</string>
    <string name="clip_selection">selection</string>

</resources>